<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.avereon.pom</groupId>
		<artifactId>jar</artifactId>
		<version>3.1.0</version>
	</parent>

	<groupId>com.avereon</groupId>
	<artifactId>zevra</artifactId>
	<version>0.5</version>
	<packaging>jar</packaging>

	<name>Zevra</name>
	<description>Utility library</description>
	<inceptionYear>2018</inceptionYear>

	<developers>
		<developer>
			<name>Mark Soderquist</name>
			<email>mark@soderquist.net</email>
			<roles>
				<role>Architect</role>
			</roles>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>avn</id>
			<url>https://repo.avereon.com/avn</url>
		</repository>
	</repositories>

	<properties>
		<product-name>${project.name}</product-name>
		<product-identifier>${project.artifactId}</product-identifier>
		<project-timestamp>${maven.build.timestamp}</project-timestamp>

		<!-- Needs to stay at a version compatible with all projects and the website -->
		<!-- Keep consistent with the CI pipeline -->
		<java.version>11</java.version>

		<!-- Version numbers updated 02 Jul 2020 -->
		<!-- Runtime dependencies -->
		<jackson.version>2.11.1</jackson.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- This configuration allows the JUnit test runner to find the unit tests -->
				<configuration>
					<argLine>
						--add-opens=com.avereon.zevra/com.avereon.data=ALL-UNNAMED
						--add-opens=com.avereon.zevra/com.avereon.event=ALL-UNNAMED
						--add-opens=com.avereon.zevra/com.avereon.product=ALL-UNNAMED
						--add-opens=com.avereon.zevra/com.avereon.settings=ALL-UNNAMED
						--add-opens=com.avereon.zevra/com.avereon.transaction=ALL-UNNAMED
						--add-opens=com.avereon.zevra/com.avereon.util=ALL-UNNAMED,com.fasterxml.jackson.databind
					</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>

